# autopilot

./: .gitignore  RELEASING.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release-simple.yml  release.yml
src/: App.tsx  index.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cli_tools.rs  git.rs  github.rs  mod.rs  process.rs  terminal.rs  watcher.rs
src/components/: CommandMenu.tsx  DiffOverlay.tsx  Navbar.tsx  NewWorktreeDialog.tsx  PRStatusBadge.tsx  SettingsPanel.tsx  Sidebar.tsx  Terminal.tsx  TerminalAnimation.tsx  TerminalGrid.tsx  UpdateNotification.tsx  WorktreeItem.tsx
src/components/RightPanel/: ChangesTab.tsx  ChecksTab.tsx  CommentsTab.tsx  DiffTab.tsx  GitTab.tsx  ReviewTab.tsx  index.tsx
src/components/ui/: command-menu.tsx  dropdown-menu.tsx  modal.tsx  segmented-control.tsx  tooltip.tsx
src/hooks/: use-tab-observer.ts  useCodeReview.ts  useGitWatcher.ts  usePRStatus.ts  useProcessStatus.ts  useTheme.ts  useUpdater.ts
src/lib/: animations.ts  diff-highlighter.ts
src/store/: index.ts
src/types/: github.ts  index.ts
src/utils/: polymorphic.ts
