[package]
name = "autopilot"
version = "0.1.0"
description = "Git Worktree Terminal Manager"
authors = ["Santiago"]
edition = "2021"

[lib]
name = "autopilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
portable-pty = "0.8"
tokio = { version = "1", features = ["full", "sync"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
window-vibrancy = "0.6"
sysinfo = "0.32"
rand = "0.9.2"

[target."cfg(unix)".dependencies]
libc = "0.2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
objc = "0.2"
